update google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ author:
     - label: "yli3277@gatech.edu"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:yli3277@gatech.edu"
-    - label: "Website"
+    - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AFix5MbWsPvipHjyB247apdW5Ha_rgHCCzvsLlIwabNdiBS8C4RsHTmCGbAN_sPaiWNNvDhiTszK_VBTByAmhw&user=2vLHs9MAAAAJ"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
