--- a/_config.yml
+++ b/_config.yml
@@ -125,9 +125,9 @@ author:
     - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AFix5MbWsPvipHjyB247apdW5Ha_rgHCCzvsLlIwabNdiBS8C4RsHTmCGbAN_sPaiWNNvDhiTszK_VBTByAmhw&user=2vLHs9MAAAAJ"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+    - label: "CV"
+      icon: "fab fa-fw fa-link"
+      url: "https://drive.google.com/file/d/1CShBWSGeh-64dvf7DDrPsllsb7gNgjmt/view?usp=drive_link"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
